assets/scss/common/_global.scss
.contributors .content,
.blog .content,
.page .content,
.error404 .content,
.docs.list .content,
.tutorial.list .content,
.showcase.list .content {
  padding-top: 1rem;
  padding-bottom: 3rem;
}

.content img {
  max-width: 100%;
}

h1,
h2,
h3,
h4,
h5,
h6,
.h1,
.h2,
.h3,
.h4,
.h5,
.h6 {
  margin: 2rem 0 1rem;
}

p {
  font-family: $font-family-open-sans;
}

.offcanvas {
  transition: 0.5s cubic-bezier(0, 1, 0, 1) !important;
}

.collapsing {
  transition: height 0.5s cubic-bezier(0, 1, 0, 1);
}

.offcanvas-header {
  border-bottom: 1px solid $gray-300;
  padding-top: 1.0625rem;
  padding-bottom: 0.8125rem;
}

h5.offcanvas-title {
  margin: 0;
}

body {
  overflow: overlay;
}

body.docs {
  padding-top: 0 !important;
  position: relative;
}

@include media-breakpoint-up(md) {
  body {
    font-size: $font-size-md;

    /*
    padding-top: 4rem !important;
    */
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  h6,
  .h1,
  .h2,
  .h3,
  .h4,
  .h5,
  .h6 {
    margin-bottom: 1.125rem;
  }
}

.home h1 {
  /* font-size: calc(1.375rem + 1.5vw); */
  font-size: calc(1.875rem + 1.5vw);
}

a:hover,
a:focus {
  text-decoration: underline;
}

a.btn:hover,
a.btn:focus {
  text-decoration: none;
}

.section {
  padding-top: 5rem;
  padding-bottom: 5rem;
}

.section-md {
  padding-top: 3rem;
  padding-bottom: 3rem;
}

.section-sm {
  padding-top: 1rem;
  padding-bottom: 1rem;
}

/*
.section svg {
  display: inline-block;
  width: 2rem;
  height: 2rem;
  vertical-align: text-top;
}
*/

/*
body {
  padding-top: 3.5625rem;
}
*/

.docs-sidebar {
  order: 2;
}

/* Scrollbar style */

/* width */
::-webkit-scrollbar {
  width: 0.8rem;
}

/* Track */
::-webkit-scrollbar-track {
  display: none;
  background: transparent;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #888;

  :hover {
    /* Handle on hover */
    background: #555;
  }
}

@include media-breakpoint-up(lg) {
  .docs-sidebar {
    order: 0;
    border-right: 1px solid $gray-200;
  }

  @supports ((position:-webkit-sticky) or (position:sticky)) {
    .docs-sidebar {
      position: -webkit-sticky;
      position: sticky;
      top: 4rem;
      z-index: 1000;
      height: calc(100vh - 4rem);
    }
  }
}

@include media-breakpoint-up(xl) {
  .docs-sidebar {
    flex: 0 1 320px;
  }
}

.docs-links {
  padding-bottom: 5rem;
}

@include media-breakpoint-up(lg) {
  @supports ((position: -webkit-sticky) or (position: sticky)) {
    .docs-links {
      max-height: calc(100vh - 4rem);
      overflow-y: scroll;
    }
  }
}

@include media-breakpoint-up(lg) {
  .docs-links {
    display: block;
    width: auto;
    margin-right: -1.5rem;
    padding-bottom: 4rem;
  }
}

.docs-toc {
  order: 2;
}

@supports ((position:-webkit-sticky) or (position:sticky)) {
  .docs-toc {
    position: -webkit-sticky;
    position: sticky;
    top: 4rem;
    height: calc(100vh - 4rem);
    overflow-y: auto;
    padding-left: 0;
  }
}

.docs-content {
  padding-bottom: 3rem;
  order: 1;

  ul,
  ol {
    li {
      font-family: $font-family-open-sans;
    }
  }

  table {
    font-family: $font-family-open-sans;
    margin: 2rem 0;

    thead {
      background: $gray-200;
      border: $gray-200;
    }

    :not(:first-child) {
      border-top: none;
    }
  }

  table.hljs-ln tr td.hljs-ln-numbers {
    padding-right: 1em;
  }

  .table {
    font-family: $font-family-open-sans;

    thead {
      background: $gray-200;
      border: $gray-200;
    }

    :not(:first-child) {
      border-top: none;
    }
  }
}

.docs-navigation {
  border-top: 1px solid $gray-200;
  margin-top: 2rem;
  margin-bottom: 0;
  padding-top: 2rem;

  .card {
    &:hover {
      border: 1px solid $gray-400;
    }
  }
}

.docs-navigation a {
  font-size: $font-size-base * 0.9;

  &:hover {
    text-decoration: none;
  }
}

@include media-breakpoint-up(lg) {
  .docs-navigation {
    margin-bottom: -1rem;
  }

  .docs-navigation a {
    font-size: $font-size-base;
  }
}

.navbar a:hover,
.navbar a:focus {
  text-decoration: none;
}

::selection{
  background: $black-original;
  color: $white;
  border-radius: 1em;
  border: 1px solid;
}

::-moz-selection {
    background: $black-original;
    color: $white;
    border-radius: 1em;
    border: 1px solid;
}

.hljs ::selection, .hljs::selection {
  background: $white!important;
  color: $black;
}

.hljs ::-moz-selection, .hljs::-moz-selection {
  background: $white!important;
  color: $black;
}

.bg-dots {
  background-image: radial-gradient($gray-300 15%, transparent 15%);
  background-position: 0 0;
  background-size: 1rem 1rem;
  -webkit-mask: linear-gradient(to top, #fff, transparent);
  mask: linear-gradient(to top, #fff, transparent);
  width: 100%;
  height: 9rem;
  margin-top: -10rem;
  z-index: -1;
}

.bg-dots-md {
  margin-top: -11rem;
}

.bg-dots-lg {
  margin-top: -12rem;
}

// https://fossheim.io/writing/posts/css-text-gradient/
.gradient-text {
  background-color: $primary;
  background-image: linear-gradient(90deg, $primary, $blue-300 50%, $pink-500);
  background-size: 100%;
  background-repeat: repeat;
  -webkit-background-clip: text;
  -moz-background-clip: text;
  -webkit-text-fill-color: transparent;
  -moz-text-fill-color: transparent;
}

.katex {
  font-size: $font-size-lg;

  .katex-html > .newline {
      margin-top: 1rem;
  }
}

.card-bar {
  border-top: 4px solid;
  border-image-source: linear-gradient(90deg, $primary, #8ed6fb 50%, #d32e9d);
  border-image-slice: 1;
}

.modal-backdrop {
  background-color: #fff;
}

.modal-backdrop.show {
  opacity: 0.7;
}

@include media-breakpoint-up(md) {
  .modal-backdrop.show {
    opacity: 0;
  }
}

/* Bootstrap breadcrumb separator */
.breadcrumb-item + .breadcrumb-item::before {
  content: var(--bs-breadcrumb-divider, "›") !important;
  width: 16px;
  height: 16px;
}

/* katex */
.katex-display > .katex > .katex-html {
  padding: 1.5rem 0;
  background: $gray-100;
}

/* figure */
figure {
  figcaption {
    padding: 0 15px;
    text-align: center;
    margin-top: -0.5em auto 0.5em auto;
    color: $gray-600;
    font-size: $font-size-sm;
    font-family: $font-family-open-sans;
  }
}

